--- a/app/src/main/res/layout/activity_choice.xml
+++ b/app/src/main/res/layout/activity_choice.xml
@@ -44,4 +44,16 @@
         android:textColor="@color/darkgrey"
         android:background="@drawable/gradient_button"/>
 
+    <Button
+        android:id="@+id/hungry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="click here if you are hungry"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="380dp"
+        android:padding="15dp"
+        android:textStyle="bold"
+        android:textColor="@color/darkgrey"
+        android:background="@drawable/gradient_button"/>
+
 </RelativeLayout>
