--- a/app/src/main/res/layout/activity_hungry.xml
+++ b/app/src/main/res/layout/activity_hungry.xml
@@ -2,4 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/nameEditText"
+        android:layout_above="@+id/startButton"
+        android:gravity="center"
+        android:background="@color/white"
+        android:padding="7dp"
+        android:hint="Please enter your location here"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
