--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -14,7 +14,7 @@
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:id="@+id/submitHungryButton"
+        android:id="@+id/submitLocationButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
