--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/locationImageView"
+        android:src="@drawable/homebackground"
+        android:scaleType="centerCrop" />
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/locationEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/startButton"
-        android:gravity="center"
-        android:background="@color/white"
-        android:padding="7dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:hint="Please enter your location here"
-        android:layout_centerHorizontal="true" />
+        android:padding="7dp"
+        android:background="@color/white"/>
 
     <Button
         android:id="@+id/submitLocationButton"
@@ -22,7 +30,7 @@
         android:text="SUBMIT"
         android:padding="10dp"
         android:layout_marginBottom="30dp"
-        android:background="@drawable/rounded_corners"
+        android:background="@drawable/rounded2"
         android:textSize="30sp"
         android:textStyle="bold" />
 
