--- a/app/src/main/res/layout/fragment_gallery_detail.xml
+++ b/app/src/main/res/layout/fragment_gallery_detail.xml
@@ -8,8 +8,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimary">
+        android:layout_height="match_parent">
 
         <ImageView
             android:layout_width="match_parent"
@@ -32,8 +31,7 @@
                 android:layout_height="wrap_content"
                 android:text="Gallery Name"
                 android:id="@+id/galleryNameTextView"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
+                android:layout_centerHorizontal="true"
                 android:textSize="20sp"
                 android:textColor="@color/colorPrimaryDark"
                 android:textStyle="bold" />
@@ -41,79 +39,72 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="pictures"
+                android:text="category"
                 android:id="@+id/categoryTextView"
                 android:layout_below="@+id/galleryNameTextView"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:textColor="@color/colorAccent"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/colorPrimary"
                 android:textStyle="italic" />
         </RelativeLayout>
 
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:paddingLeft="30dp"
+            android:paddingTop="20dp"
+            android:paddingRight="30dp"
+            android:background="@color/darkgrey">
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_above="@+id/saveGalleryButton"
-                android:paddingLeft="30dp"
-                android:paddingTop="20dp"
-                android:paddingRight="30dp">
+                android:text="(503) 223-1282"
+                android:id="@+id/phoneTextView"
+                android:drawablePadding="8dp"
+                android:drawableLeft="@drawable/ic_contact_phone_black_24dp"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="123 SW Best Ever Ave. Portland, Oregon, 97222"
+                android:drawablePadding="8dp"
+                android:drawableLeft="@drawable/ic_location_on_black_24dp"
+                android:id="@+id/addressTextView"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp"
+                android:gravity="center_vertical"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="View on Yelp"
                     android:id="@+id/websiteTextView"
-                    android:drawablePadding="4dp"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="10dp"
-                    android:gravity="center" />
-
-                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="(503) 223-1282"
-                    android:id="@+id/phoneTextView"
-                    android:drawablePadding="4dp"
-                    android:textColor="@color/colorAccent"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="-2dp"
+                    android:layout_marginBottom="22dp"
+                    android:drawablePadding="8dp"
+                    android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
+                    android:text="View on Yelp"
+                    android:textColor="@color/lifhtGrreen"
                     android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="10dp"
-                    android:gravity="center"/>
+                    android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="123 SW Best Ever Ave. Portland, Oregon, 97222"
-                    android:drawablePadding="4dp"
-                    android:id="@+id/addressTextView"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="10dp"
-                    android:gravity="center_vertical"/>
+            </RelativeLayout>
 
-            </LinearLayout>
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Save Restaurant"
-                android:id="@+id/saveGalleryButton"
-                android:layout_alignParentBottom="true"
-                android:background="@color/colorAccent"
-                android:textColor="@color/colorAccent"
-                android:textSize="15sp" />
-        </RelativeLayout>
+        </LinearLayout>
+
     </LinearLayout>
 
 </FrameLayout>
